test/success/integration/_succ_expr_length_1.hs
x :: Int
x = length ([1,2,3])
main = print "hello"