test/fail/integration/_fail_grammar_expr_length_1.hs
x :: Int
x = length []
main = print "hello"